--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "gadgets-commerce",
   "version": "1.0.0",
   "description": "MERN e-commerce shop",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node backend/index",
-    "server": "nodemon backend/index",
-    "client": "npm start --prefix frontend",
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Emmanuel Ahuno",
   "license": "ISC",
